Added grant status front-end

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,8 @@
 
 {% block main %}
 
-    <button type="button" class="btn btn-default btn-lg">
-        <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star
-    </button>
-
-    <img src="https://harvard.az1.qualtrics.com/ControlPanel/File.php?F=F_1qVRpKgtglyUJ5t" />
+    <div class="jumbotron" style="text-align:center;margin-top:2%;">
+        <h1>Welcome to NOVA!</h1>
+    </div>
 
 {% endblock %}
