--- a/templates/grant_status.html
+++ b/templates/grant_status.html
@@ -32,7 +32,7 @@
             <div class="flex">
                 <div class="centered">
                     Contact Name: {{ grant.contact_first_name }} {{ grant.contact_last_name }}<br>
-                    Submitted: {{ grant.application_submit_time.strftime('%A %d, %Y') }}<br>
+                    Submitted: {{ grant.application_submit_time.strftime('%B %d, %Y') }}<br>
                     Amount Requested: {{ grant.amount_requested | usd }}<br>
                     Grant Type: {{ "Upfront" if grant.is_upfront else "Retroactive" }}
                 </div>
@@ -47,6 +47,7 @@
                     <i class="fa fa-check-square-o" aria-hidden="true"></i> Submit Application<br>
                     <i class="fa fa-{{ 'check-' if grant.interview_schedule_date }}square-o" aria-hidden="true"></i> Interview Scheduled<br>
                     <i class="fa fa-{{ 'check-' if grant.interview_occurred }}square-o" aria-hidden="true"></i> Attend Interview<br>
+                    <i class="fa fa-{{ 'check-' if grant.council_approved }}square-o" aria-hidden="true"></i> Passed by Council<br>
                     <i class="fa fa-{{ 'check-' if grant.receipts_submitted }}square-o" aria-hidden="true"></i> Submit Receipts<br>
                     <i class="fa fa-{{ 'check-' if grant.is_paid }}square-o" aria-hidden="true"></i> Receipts Reviewed<br>
                     <i class="fa fa-{{ 'check-' if grant.is_paid }}square-o" aria-hidden="true"></i> Funds Dispensed
@@ -59,9 +60,9 @@
             </div>
             <div class="flex">
                 <div class="centered">
-                    <a role="button" class="btn btn-default" aria-label="Left Align">Review Application</a><br>
-                    {% if grant.interview_occurred %}
-                        <a role="button" class="btn btn-default margin15" aria-label="Left Align">What You Were Granted</a><br>
+                    <a  href="/grant/{{ grant.grant_id }}/application" role="button" class="btn btn-default" aria-label="Left Align">Review Application</a><br>
+                    {% if grant.council_approved %}
+                        <a href="/grant/{{ grant.grant_id }}/allocations" role="button" class="btn btn-default margin15" aria-label="Left Align">What You Were Granted</a><br>
                         <a href="https://harvard.az1.qualtrics.com/SE/?SID=SV_3mA2HIDqUTZHT0h&grant_id={{ grant.grant_id }}" role="button" class="btn btn-default margin15" aria-label="Left Align">Submit Receipts</a>
                     {% endif %}
                 </div>
