Added Grant Allocations View page

--- a/templates/grant_allocations.html
+++ b/templates/grant_allocations.html
@@ -13,42 +13,96 @@
                 <h4>These amounts were voted upon by the council after the interview on {{ grant.interview_date | date }}.</h4>
             </div>
             <table class="table table-striped table-responsive table-hover margin40">
-                <thead></thead>
-                <tbody>
+                <thead>
                     <tr>
-                        <td></td>
+                        <th>Category</th>
+                        <th>Description of Funding</th>
+                        <th>Grant Amount</th>
                     </tr>
-                    interviewer = db.Column(db.Text)
-                    interview_occurred = db.Column(db.Boolean, default=False)
-                    interview_schedule_date = db.Column(db.DateTime) # Next scheduled interview
-                    interview_schedule_history = db.Column(db.Text) # comma-separated interview scheduled times
-                    interviewer_notes = db.Column(db.Text)
-                    food_allocated = db.Column(db.Float)
-                    food_allocated_notes = db.Column(db.Text)
-                    travel_allocated = db.Column(db.Float)
-                    travel_allocated_notes = db.Column(db.Text)
-                    publicity_allocated = db.Column(db.Float)
-                    publicity_allocated_notes = db.Column(db.Text)
-                    materials_allocated = db.Column(db.Float)
-                    materials_allocated_notes = db.Column(db.Text)
-                    food_allocated = db.Column(db.Float)
-                    food_allocated_notes = db.Column(db.Text)
-                    venue_allocated = db.Column(db.Float)
-                    venue_allocated_notes = db.Column(db.Text)
-                    decorations_allocated = db.Column(db.Float)
-                    decorations_allocated_notes = db.Column(db.Text)
-                    media_allocated = db.Column(db.Float)
-                    media_allocated_notes = db.Column(db.Text)
-                    admissions_allocated = db.Column(db.Float)
-                    admissions_allocated_notes = db.Column(db.Text)
-                    hupd_allocated = db.Column(db.Float)
-                    hupd_allocated_notes = db.Column(db.Text)
-                    personnel_allocated = db.Column(db.Float)
-                    personnel_allocated_notes = db.Column(db.Text)
-                    other_allocated = db.Column(db.Float)
-                    other_allocated_notes = db.Column(db.Text)
+                </thead>
+                <tbody>
+                    {% if grant.food_allocated %}
+                    <tr>
+                        <td>Food</td>
+                        <td>{{ grant.food_allocated_notes }}</td>
+                        <td>{{ grant.food_allocated | usd}}</td>
+                    </tr>
+                    {% endif %}
+                    {% if grant.travel_allocated %}
+                    <tr>
+                        <td>Travel</td>
+                        <td>{{ grant.travel_allocated_notes }}</td>
+                        <td>{{ grant.travel_allocated | usd }}</td>
+                    </tr>
+                    {% endif %}
+                    {% if grant.publicity_allocated %}
+                    <tr>
+                        <td>Publicity</td>
+                        <td>{{ grant.publicity_allocated_notes }}</td>
+                        <td>{{ grant.publicity_allocated | usd }}</td>
+                    </tr>
+                    {% endif %}
+                    {% if grant.materials_allocated %}
+                    <tr>
+                        <td>Materials</td>
+                        <td>{{ grant.materials_allocated_notes }}</td>
+                        <td>{{ grant.materials_allocated | usd }}</td>
+                    </tr>
+                    {% endif %}
+                    {% if grant.venue_allocated %}
+                    <tr>
+                        <td>Venue</td>
+                        <td>{{ grant.venue_allocated_notes }}</td>
+                        <td>{{ grant.venue_allocated | usd }}</td>
+                    </tr>
+                    {% endif %}
+                    {% if grant.decorations_allocated %}
+                    <tr>
+                        <td>Decorations</td>
+                        <td>{{ grant.decorations_allocated_notes }}</td>
+                        <td>{{ grant.decorations_allocated | usd }}</td>
+                    </tr>
+                    {% endif %}
+                    {% if grant.media_allocated %}
+                    <tr>
+                        <td>Media</td>
+                        <td>{{ grant.media_allocated_notes }}</td>
+                        <td>{{ grant.media_allocated | usd }}</td>
+                    </tr>
+                    {% endif %}
+                    {% if grant.admissions_allocated %}
+                    <tr>
+                        <td>Admission Fees</td>
+                        <td>{{ grant.admissions_allocated_notes }}</td>
+                        <td>{{ grant.admissions_allocated | usd }}</td>
+                    </tr>
+                    {% endif %}
+                    {% if grant.hupd_allocated %}
+                    <tr>
+                        <td>HUPD</td>
+                        <td>{{ grant.hupd_allocated_notes }}</td>
+                        <td>{{ grant.hupd_allocated | usd }}</td>
+                    </tr>
+                    {% endif %}
+                    {% if grant.personnel_allocated %}
+                    <tr>
+                        <td>Personnel</td>
+                        <td>{{ grant.personnel_allocated_notes }}</td>
+                        <td>{{ grant.personnel_allocated | usd }}</td>
+                    </tr>
+                    {% endif %}
+                    {% if grant.other_allocated %}
+                    <tr>
+                        <td>Other</td>
+                        <td>{{ grant.other_allocated_notes }}</td>
+                        <td>{{ grant.other_allocated | usd }}</td>
+                    </tr>
+                    {% endif %}
                 </tbody>
             </table>
+            <div class="center">
+                <p>The UC will fund up to these amounts in each category.</p>
+            </div>
         </div>
     </div>
 
