--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,7 +28,7 @@
 
     <body>
 
-        <div class="container">
+        <div class="container{{ '-fluid' if fullwidth }}">
 
             <!-- Used for displaying alerts to user -->
             {% if get_flashed_messages() %}
