--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,12 +16,20 @@
         <!-- Custom Styles -->
         <link href="{{ url_for('static', filename='styles.css') }}" rel="stylesheet"/>
 
+        <!-- Favicons -->
+        <link rel="apple-touch-icon" sizes="120x120" href="{{ url_for('static', filename='favicons/apple-touch-icon.png') }}">
+        <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicons/favicon-32x32.png') }}" sizes="32x32">
+        <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicons/favicon-16x16.png') }}" sizes="16x16">
+        <link rel="manifest" href="{{ url_for('static', filename='favicons/manifest.json') }}">
+        <link rel="mask-icon" href="{{ url_for('static', filename='favicons/safari-pinned-tab.svg') }}safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="theme-color" content="#ffffff">
+
         <!-- jQuery -->
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        
+
         <title>UC Grants | {% block title %}{% endblock %}</title>
 
     </head>
