--- a/templates/small_grants.html
+++ b/templates/small_grants.html
@@ -23,7 +23,7 @@
                 </thead>
                 <tbody>
                     {% for grant in grants %}
-                        <tr class="clickable-row" data-href="/grant/{{ grant.grant_id }}">
+                        <tr class="clickable-row" data-href="{{ url_for('small_grant_review', grant_id=grant.grant_id) }}">
                             <td>{{ grant.grant_id }}</td>
                             <td><b>{{ grant.organization }}</b></td>
                             <td><b>{{ grant.project }}</b></td>
