--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,10 @@
     text-align: center;
 }
 
+.text-right {
+    text-align: right;
+}
+
 .padding-bottom-20 {
     padding-bottom: 20px;
 }
@@ -26,6 +30,10 @@
 
 .clickable-row {
     cursor: pointer;
+}
+
+.border-right {
+    border-right: solid 1px #dedede;
 }
 
 /* Grant Interview Page CSS */
