--- a/templates/grants_pack_review.html
+++ b/templates/grants_pack_review.html
@@ -23,8 +23,11 @@
     <div class="row">
         <div class="col-md-12 margin40 listboxes">
             <select multiple="multiple" size="10" name="grants_list" class="grants_dual_listbox">
-                {% for grant in grants %}
+                {% for grant in orphan_grants %}
                     <option id="{{ grant.grant_id }}" value="{{ grant.grant_id }}" data-project="{{ grant.project }}" data-organization="{{ grant.organization }}" data-notes="{{ grant.interviewer_notes | suppress_none }}" data-funding="[{&quot;category&quot;:&quot;food&quot;,&quot;amount&quot;:32.12,&quot;description&quot;:&quot;test description&quot;}]">{{ grant.organization }}&nbsp;"{{ grant.project }}"</option>
+                {% endfor %}
+                {% for grant in child_grants %}
+                    <option selected="selected" id="{{ grant.grant_id }}" value="{{ grant.grant_id }}" data-project="{{ grant.project }}" data-organization="{{ grant.organization }}" data-notes="{{ grant.interviewer_notes | suppress_none }}" data-funding="[{&quot;category&quot;:&quot;food&quot;,&quot;amount&quot;:32.12,&quot;description&quot;:&quot;test description&quot;}]">{{ grant.organization }}&nbsp;"{{ grant.project }}"</option>
                 {% endfor %}
               </select>
         </div>
